--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
 <body>
   <script src="js/scripts.js"></script>
-  <h1>Hello world!</h1>
+  <img src="heroapp.jpg" alt="heroapp">
 </body>
 </html>
