--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The HTML5 Herald</title>
+  <title>ALLHero</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
@@ -15,7 +15,7 @@
   <![endif]-->
 </head>
 
-<body>
+<body bgcolor="black">
   <script src="js/scripts.js"></script>
   <img src="heroapp.jpg" alt="heroapp">
 </body>
