--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
 <body bgcolor="black">
   <script src="js/scripts.js"></script>
   <img src="heroapp.jpg" alt="heroapp">
+  <map name="downloadmap">
+	<area shape="circle" coords="90,58,3" href="#" alt="AppStore">
+  </map>
 </body>
 </html>
