--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body bgcolor="black">
   <script src="js/scripts.js"></script>
-  <img src="heroapp.jpg" alt="heroapp" usemap="#downloadmap">
+  <img src="heroapp.jpg" width="1300" height="1502" alt="heroapp" usemap="#downloadmap">
   <map name="downloadmap">
 	<area shape="circle" coords="90,58,3" href="#" alt="AppStore">
   </map>
