--- a/index.html
+++ b/index.html
@@ -5,21 +5,17 @@
   <meta charset="utf-8">
 
   <title>ALLHero</title>
-  <meta name="description" content="The HTML5 Herald">
+  <meta name="description" content="ALLHero app">
   <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
-  <!--[if lt IE 9]>
-  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-  <![endif]-->
 </head>
 
 <body bgcolor="black">
   <script src="js/scripts.js"></script>
-  <img src="heroapp.jpg" width="1300" height="1502" alt="heroapp" usemap="#downloadmap">
+  <img src="heroapp.jpg" width="1300" height="1502" alt="ALLHero" usemap="#downloadmap">
   <map name="downloadmap">
-	<area shape="circle" coords="90,58,3" href="#" alt="AppStore">
+    <area shape="rect" coords="0,0,82,126" alt="Sun" href="sun.htm">
+    <area shape="circle" coords="90,58,3" alt="Mercury" href="mercur.htm">
+    <area shape="circle" coords="124,58,8" alt="Venus" href="venus.htm">
   </map>
 </body>
 </html>
