--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <area shape="rect" coords="0,0,82,126" alt="Sun" href="sun.htm">
     <area shape="circle" coords="90,58,3" alt="Mercury" href="mercur.htm">
     <area shape="circle" coords="124,58,8" alt="Venus" href="venus.htm">
+    <area id="AppStore" alt="AppStore" title="AppStore" href="#" shape="rect" coords="346,436,411,502" style="outline:none;" target="_self"/>
+    <area id="GooglePlay" alt="GooglePlay" title="GooglePlay" href="#" shape="rect" coords="488,438,553,507" style="outline:none;" target="_self"/>
   </map>
 </body>
 </html>
