--- a/index.html
+++ b/index.html
@@ -13,21 +13,6 @@
   <script src="js/jquery.form.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <script>
-  $(function(){
-    $('#contact').validate({
-      submitHandler: function(form) {
-        $(form).ajaxSubmit({
-          url: 'process.php',
-          success: function() {
-            $('#contact').hide();
-            $('#contact-form').append("<p class='thanks'>Thanks! Your request has been sent.</p>")
-          }
-        });
-      }
-    });
-  });
-  </script>
-  <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -46,8 +31,9 @@
     <area id="GooglePlay" alt="GooglePlay" title="GooglePlay" href="#" shape="rect" coords="488,438,553,507" style="outline:none;" target="_self"/>
   </map>
   <div id="contact-form">
-    <form id="contact" method="post" action="">
+    <form action="https://getsimpleform.com/messages?form_api_token=d0016c0fe5e2caca9c8d32401e626aad" method="post">
       <fieldset>
+        <input type='hidden' name='redirect_to' value='http://allhero.co' />
         <input type="email" name="email" placeholder="micorreo@correo.com" title="Ingresa tu correo electrónico" class="required email">
       </fieldset>
     </form>
