--- a/index.html
+++ b/index.html
@@ -26,13 +26,12 @@
     <area id="AppStore" alt="AppStore" title="AppStore" href="#" shape="rect" coords="346,436,411,502" style="outline:none;" target="_self"/>
     <area id="GooglePlay" alt="GooglePlay" title="GooglePlay" href="#" shape="rect" coords="488,438,553,507" style="outline:none;" target="_self"/>
   </map>
-  <div id="contact-form">
-    <form action="https://getsimpleform.com/messages?form_api_token=d0016c0fe5e2caca9c8d32401e626aad" method="post">
+
+    <form class="suscribe-form" action="https://getsimpleform.com/messages?form_api_token=d0016c0fe5e2caca9c8d32401e626aad" method="post">
       <fieldset>
         <input type='hidden' name='redirect_to' value='http://allhero.co' />
         <input type="email" name="email" placeholder="micorreo@correo.com" title="Ingresa tu correo electrónico" class="required email">
       </fieldset>
     </form>
-  </div><!-- /end #contact-form -->
 </body>
 </html>
